<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fragment android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/myMap"
        android:name="com.google.android.gms.maps.MapFragment"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/ButtonHolder" />

    <LinearLayout
        android:id="@+id/ButtonHolder"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:gravity="bottom"
        android:elevation="2dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:id="@+id/btnFacebook"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/btnFacebook"
            android:onClick="openFaceBook"
            android:layout_width="match_parent"
            style="?android:attr/borderlessButtonStyle"
            android:scaleType="fitCenter"
            android:src="@drawable/fbicon" />

        <ImageButton
            android:id="@+id/btnTwitter"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/btnTwitter"
            android:onClick="openTwitter"
            style="?android:attr/borderlessButtonStyle"
            android:scaleType="fitCenter"
            android:src="@drawable/twittericon" />

        <ImageButton
            android:id="@+id/btnWebsite"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/btnWebsite"
            android:onClick="openWebsiteInBrowser"
            style="?android:attr/borderlessButtonStyle"
            android:scaleType="fitCenter"
            android:src="@drawable/websiteicon"/>

    </LinearLayout>

</RelativeLayout>